优化泛型
Former-commit-id: 372b000f06bb9d162d6610fe352869d54978d47b